# lecture-tests

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/commands/: up-major.md  up-minor.md  up-patch.md
backend/: Dockerfile  Dockerfile.worker  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_lecture_questions_json.py  0003_quiz_sets_pool.py  0004_question_votes.py  0005_user_password.py  0006_topics.py
backend/app/: config.py  db.py  main.py  models.py  schemas.py  security.py  storage.py  vllm_client.py  worker.py
backend/app/routers/: attempts.py  lectures.py  quiz.py  topics.py  users.py  votes.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  History.tsx  LoginForm.tsx  PageShell.tsx  PullToRefresh.tsx  PwaInstall.tsx  Quiz.tsx  SharedTestPage.tsx  TestPage.tsx  UploadPage.tsx  UsersPage.tsx  api.ts  index.css  main.tsx  permissions.ts  useLectures.ts  useTopics.ts
frontend/src/offline/: ServerStatus.tsx  TopicSyncToggle.tsx  cachedApi.ts  db.ts  probe.ts  sync.ts  useServerStatus.ts  useTopicSync.ts
helm/gpu-time-slicing/: README.md  time-slicing-config.yaml
helm/lecture-tests/: Chart.yaml  values-mgultra.yaml  values.yaml
helm/lecture-tests/templates/: _helpers.tpl  api.yaml  config.yaml  minio.yaml  (+5 more)
helm/sealed-secrets/: README.md  seal.sh  secret.example.yaml
scripts/: build.sh  deploy.sh  enable-nopasswd-sudo.sh
(+13 files in other folders)
