[project]
name = "lecture-tests-backend"
version = "0.1.0"
description = "Lecture -> transcribe -> MCQ tests backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.9",
    "minio>=7.2",
    "arq>=0.26",
    "httpx>=0.27",
    "faster-whisper>=1.0",
    "yt-dlp>=2024.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
